// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoList adds todo to the list on enter key press 1`] = `ShallowWrapper {}`;

exports[`TodoList component renders TodoList component 1`] = `
<div>
  <div
    class="container"
  >
    <form
      class="form-input"
    >
      <input
        class="input-text"
        placeholder="  tap here the todo..."
        type="text"
        value=""
      />
    </form>
    <div
      class="todo-done"
    >
      <div
        class="table-todo"
      >
        <h3>
          Todo
        </h3>
        <ul />
      </div>
      <div
        class="table-done"
      >
        <h3>
          Done
        </h3>
        <ul />
      </div>
    </div>
  </div>
</div>
`;

exports[`TodoList renders correctly 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <form
      class="form-input"
    >
      <input
        class="input-text"
        placeholder="  tap here the todo..."
        type="text"
        value=""
      />
    </form>
    <div
      class="todo-done"
    >
      <div
        class="table-todo"
      >
        <h3>
          Todo
        </h3>
        <ul />
      </div>
      <div
        class="table-done"
      >
        <h3>
          Done
        </h3>
        <ul />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
